# pc-tesis

./: .gitattributes  .gitignore  README.md
cpp_paper/benchmarkLinux/: CMakeLists.txt  Main.cpp  clean.sh  compile.sh  export.sh  redef.cpp  redef.h  run.sh  statistic_KPI.csv
cpp_paper/benchmarkLinux/Config/: Config.cpp
cpp_paper/benchmarkLinux/DataManagementLayer/Data/: DataStream.cpp  Input_SingleStreamAlg.cpp  Input_SingleStreamAlg.h
cpp_paper/benchmarkLinux/DataManagementLayer/Dataloader/: DataLoader.cpp  DataLoader.h
cpp_paper/benchmarkLinux/DataStructures/DynArray/: DynArray.h
cpp_paper/benchmarkLinux/DataStructures/Line/: Line.cpp  Line.h
cpp_paper/benchmarkLinux/Experiments/: Experiment_Multi_Stream.h
cpp_paper/benchmarkLinux/Utils/: KPI_statistics.h
cpp_paper/benchmarkLinux/testingData/_DATA_/: test.csv
cpp_project/: .gitignore  CMakeLists.txt  main.cpp  make_mac.sh  make_ubuntu.sh  noaa_spc-wind.csv.c  noaa_spc-wind.csv.c.d-float.csv  noaa_spc-wind.csv.c.d-int.csv  noaa_spc-wind.csv.c.d.csv  output.csv  test.csv  test.csv.c  test.csv.c.d.csv
cpp_project/include/: bit_stream.h  csv_utils.h  datetime_utils.h  file_utils.h  line_utils.h  operation_utils.h  scripts.h  string_utils.h  tests.h  tests_coder.h  tests_math_utils.h  vector_utils.h
cpp_project/include/coders/: coder_base.h  coder_utils.h  constants.h  decoder_base.h  header_utils.h
cpp_project/include/coders/apca/: apca_window.h  coder_apca.h  decoder_apca.h
cpp_project/include/coders/base/: coder_base.h  decoder_base.h
cpp_project/include/coders/basic/: coder_basic.h  decoder_basic.h
cpp_project/include/coders/ca/: ca_line.h  ca_point.h  ca_window.h  coder_ca.h  decoder_ca.h
cpp_project/include/coders/cols/: coder_cols.h  decoder_cols.h  mask.h
cpp_project/include/coders/common/: coder_common.h  decoder_common.h
cpp_project/include/coders/constant/: constant_coder_utils.h
cpp_project/include/coders/header/: header_coder.h  header_decoder.h  header_utils.h
cpp_project/include/coders/linear/: linear_coder_utils.h
cpp_project/include/coders/mask/: mask.h  mask_coder.h  mask_decoder.h
cpp_project/include/coders/pca/: coder_pca.h  decoder_pca.h  pca_window.h
cpp_project/include/coders/pwlh/: coder_pwlh.h  decoder_pwlh.h  pwlh_window.h
cpp_project/include/coders/slide_filter/: ca_window.h  coder_slide_filter.h  decoder_ca.h  decoder_slide_filter.h  slide_filter_window.h
cpp_project/include/coders/utils/: coder_utils.h  column.h  window.h
cpp_project/include/dataset/: column_code.h  dataset.h  dataset_utils.h  range.h
cpp_project/include/file_utils/: file_a.h  path.h
cpp_project/include/file_utils/bit_stream/: bit_stream_reader.h  bit_stream_utils.h  bit_stream_writer.h
cpp_project/include/file_utils/csv/: csv_reader.h  csv_utils.h  csv_writer.h
cpp_project/include/file_utils/text/: text_reader.h
cpp_project/include/tests/: tests.h  tests_bit_stream.h  tests_coder.h  tests_coders.h  tests_coders_utils.h  tests_dataset_utils.h  tests_estimator.h  tests_examples.h  tests_header_coder.h  tests_line.h  tests_modelKT.h
cpp_project/include/utils/: math_utils.h  string_utils.h  vector_utils.h
cpp_project/src/: bit_stream.cpp  csv_utils.cpp  datetime_utils.cpp  file_utils.cpp  math_utils.cpp  operation_utils.cpp  scripts.cpp  string_utils.cpp  tests.cpp  tests_coder.cpp
cpp_project/src/coders/: coder_base.cpp  coder_utils.cpp  constants.cpp  decoder_base.cpp  header_utils.cpp
cpp_project/src/coders/apca/: apca_window.cpp  coder_apca.cpp  decoder_apca.cpp
cpp_project/src/coders/base/: coder_base.cpp  decoder_base.cpp
cpp_project/src/coders/basic/: coder_basic.cpp  decoder_basic.cpp
cpp_project/src/coders/ca/: ca_window.cpp  coder_ca.cpp  decoder_ca.cpp
cpp_project/src/coders/cols/: coder_cols.cpp  decoder_cols.cpp
cpp_project/src/coders/common/: coder_common.cpp  decoder_common.cpp
cpp_project/src/coders/header/: header_coder.cpp  header_decoder.cpp
cpp_project/src/coders/linear/: linear_coder_utils.cpp
cpp_project/src/coders/mask/: mask_coder.cpp  mask_decoder.cpp
cpp_project/src/coders/pca/: coder_pca.cpp  decoder_pca.cpp  pca_window.cpp
cpp_project/src/coders/pwlh/: coder_pwlh.cpp  decoder_pwlh.cpp  pwlh_window.cpp
cpp_project/src/coders/slide_filter/: ca_window.cpp  coder_slide_filter.cpp  decoder_slide_filter.cpp  slide_filter_window.cpp
cpp_project/src/coders/utils/: coder_utils.cpp
cpp_project/src/dataset/: column_code.cpp  dataset.cpp  dataset_utils.cpp
cpp_project/src/file_utils/: file_a.cpp
cpp_project/src/file_utils/bit_stream/: bit_stream_reader.cpp  bit_stream_utils.cpp  (+1 more)
cpp_project/src/tests/: tests.cpp  tests_bit_stream.cpp  tests_coders.cpp  tests_coders_utils.cpp  tests_dataset_utils.cpp  tests_estimator.cpp  tests_examples.cpp  tests_header_coder.cpp  tests_line.cpp  tests_math_utils.cpp  tests_modelKT.cpp  tests_string_utils.cpp  tests_vector_utils.cpp
cpp_project/src/utils/: line_utils.cpp  math_utils.cpp  string_utils.cpp
cpp_project/test-output/: testFloat.code
cpp_project/test_files/: copy.csv  noaa_spc-hail.csv-GAMPS-Decode.csv  vwc_1202.dat-2cols-2N-397.csv-CoderSF-Code  vwc_1202.dat-2cols-2N.csv-CoderSF-Code  vwc_1202.dat-2cols-2N.csv-CoderSF-Decode.csv  vwc_1202.dat-2cols-397.csv-CoderSF-Code  vwc_1202.dat-2cols-397.csv-CoderSF-Decode.csv  vwc_1202.dat-2cols-5N-397+4N.csv-CoderSF-Code  vwc_1202.dat-2cols-5N-397+4N.csv-CoderSF-Decode.csv  vwc_1202.dat-2cols-5N-397.csv-CoderSF-Code  vwc_1202.dat-2cols-5N-397.csv-CoderSF-Decode.csv  vwc_1202.dat-2cols-5N.csv-CoderSF-Code  vwc_1202.dat-2cols.csv-CoderSF-Code  vwc_1202.dat.csv-CA-Code  vwc_1202.dat.csv-CA-Decode.csv  vwc_1202.dat.csv-CoderSF-Code  vwc_1202.dat.csv-CoderSF-Decode.csv  vwc_1202.dat.csv-GAMPS-Code  vwc_1202.dat.csv-GAMPS-Decode.csv  vwc_1202.dat2.csv-CoderSF-Code  vwc_1202.dat_CLEAN.csv-CoderSF-Code  vwc_1202.dat_CLEAN.csv-CoderSF-Decode.csv
cpp_project/test_files/examples/: example1.csv  example2.csv
cpp_project/test_files/sf/: vwc_1202.dat-2cols-2N-397.csv  vwc_1202.dat-2cols.csv  vwc_1202.dat2.csv  vwc_1202.dat_CLEAN.csv
(+1872 files in other folders)
