cmake_minimum_required(VERSION 3.9)
project(benchmarkLinux)

set(CMAKE_CXX_STANDARD 11)

add_executable(benchmarkLinux
        Algorithms/APCA/Control/APCA.cpp
        Algorithms/APCA/Control/APCA.h
        Algorithms/APCA/Data/APCAEntry.h
        Algorithms/APCA/Data/APCAInput.h
        Algorithms/APCA/Data/APCAOutput.cpp
        Algorithms/APCA/Data/APCAOutput.h
        Algorithms/CHEB/Control/CHEB.cpp
        Algorithms/CHEB/Control/CHEB.h
        Algorithms/CHEB/Control/CHEBTranform.cpp
        Algorithms/CHEB/Control/CHEBTranform.h
        Algorithms/CHEB/Data/ApproxPolynomial.cpp
        Algorithms/CHEB/Data/ApproxPolynomial.h
        Algorithms/CHEB/Data/CHEBInput.cpp
        Algorithms/CHEB/Data/CHEBInput.h
        Algorithms/CHEB/Data/CHEBOutput.cpp
        Algorithms/CHEB/Data/CHEBOutput.h
        Algorithms/CHEB/Transform/eval.cpp
        Algorithms/CHEB/Transform/gsl_chebyshev.h
        Algorithms/CHEB/Transform/gsl_errno.h
        Algorithms/CHEB/Transform/gsl_machine.h
        Algorithms/CHEB/Transform/gsl_math.h
        Algorithms/CHEB/Transform/gsl_mode.h
        Algorithms/CHEB/Transform/gsl_pow_int.h
        Algorithms/CHEB/Transform/gsl_types.h
        Algorithms/CHEB/Transform/init.cpp
        Algorithms/GAMPS/control/FacilityLocProb.cpp
        Algorithms/GAMPS/control/FacilityLocProb.h
        Algorithms/GAMPS/control/GAMPS.cpp
        Algorithms/GAMPS/control/GAMPS.h
        Algorithms/GAMPS/control/GAMPS_Computation.cpp
        Algorithms/GAMPS/control/GAMPS_Computation.h
        Algorithms/GAMPS/data/GAMPSEntry.h
        Algorithms/GAMPS/data/GAMPSInput.cpp
        Algorithms/GAMPS/data/GAMPSInput.h
        Algorithms/GAMPS/data/GAMPSOutput.cpp
        Algorithms/GAMPS/data/GAMPSOutput.h
        Algorithms/PCA/Control/PCA.cpp
        Algorithms/PCA/Control/PCA.h
        Algorithms/PCA/Data/PCAEntry.h
        Algorithms/PCA/Data/PCAInput.cpp
        Algorithms/PCA/Data/PCAInput.h
        Algorithms/PCA/Data/PCAOutput.cpp
        Algorithms/PCA/Data/PCAOutput.h
        Algorithms/PWLH/Control/LinearBucket.cpp
        Algorithms/PWLH/Control/LinearBucket.h
        Algorithms/PWLH/Control/PWLH.cpp
        Algorithms/PWLH/Control/PWLH.h
        Algorithms/PWLH/Data/PWLHInput.h
        Algorithms/PWLH/Data/PWLHOutput.cpp
        Algorithms/PWLH/Data/PWLHOutput.h
        Algorithms/SlideFilter/Control/SlideFilters.cpp
        Algorithms/SlideFilter/Control/SlideFilters.h
        Algorithms/SlideFilter/Data/SlideFiltersEntry.h
        Algorithms/SlideFilter/Data/SlideFiltersInput.cpp
        Algorithms/SlideFilter/Data/SlideFiltersInput.h
        Algorithms/SlideFilter/Data/SlideFiltersOutPut.cpp
        Algorithms/SlideFilter/Data/SlideFiltersOutPut.h
        Algorithms/Algo.h
        Config/Config.cpp
        Config/Config.h
        Config/Config_Reader.h
        DataManagementLayer/Data/DataItem.h
        DataManagementLayer/Data/DataStream.cpp
        DataManagementLayer/Data/DataStream.h
        DataManagementLayer/Data/Input_SingleStreamAlg.cpp
        DataManagementLayer/Data/Input_SingleStreamAlg.h
        DataManagementLayer/Data/MultiDataStream.cpp
        DataManagementLayer/Data/MultiDataStream.h
        DataManagementLayer/Data/Output.h
        DataManagementLayer/Dataloader/DataLoader.cpp
        DataManagementLayer/Dataloader/DataLoader.h
        DataStructures/DynArray/DynArray.cpp
        DataStructures/DynArray/DynArray.h
        DataStructures/Line/Line.cpp
        DataStructures/Line/Line.h
        DataStructures/Polygon/CPolygon.cpp
        DataStructures/Polygon/CPolygon.h
        Experiments/Experiment_Multi_Stream.h
        Experiments/Experiment_Single_Stream.h
        iniparser/dictionary.c
        iniparser/dictionary.h
        iniparser/iniparser.c
        iniparser/iniparser.h
        Utils/dirent.h
        Utils/file_operation.h
        Utils/KPI_statistics.h
        Utils/old_dirent.h
        Main.cpp
        redef.cpp
        redef.h
        stdafx.cpp
        stdafx.h)
